add to Tools : OCHA>illust/hand drawing/
OCHAのToolsに hand drawing/ を追加しました。

--- a/others.html
+++ b/others.html
@@ -143,7 +143,7 @@
                         <td><span class="category">イラスト</span><br>
                             <span class="name">OCHA 楽曲イメージイラスト</span><br>
                             <ul class="detail">
-                                <li>Tools : Photoshop</li>
+                                <li>Tools : hand drawing/Photoshop</li>
                                 <li>Production period : 2016</li>
                                 </ul>
                         </td>
