--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
             <!-- mv -->
 
             <!-- about -->
-            <section class="about section" id="about">
+            <span id="about"></span>
+            <section class="about section">
                 <div class="container">
                     <h2 class="title">ABOUT</h2>
                     <div class="profile">
@@ -71,7 +72,7 @@
             <!-- /about -->
 
             <!-- categoly -->
-            <section class="categoly section" id="categoly">
+            <section class="section" id="categoly">
                 <div class="container">
                     <h3>CATEGORY</h3>
                     <div class="categoly-list">
