--- a/illust.html
+++ b/illust.html
@@ -78,7 +78,7 @@
                     <tr>
                         <th><a href="portfolio_img/reseme3-3.jpg" data-lightbox="group"><img class="item_img" src="portfolio_img/reseme3-3.jpg" alt="２コマイラスト"></a></th>
                         <td><span class="category">イラスト</span><br><span class="name">２コマ アホの坂田</span><br>
-                            <span class="detail">Tools : hand drawing/Photoshop</span>
+                            <span class="detail">Tools : Hand-drawn/Photoshop</span>
                         </td>
                     </tr>
                     <tr>
@@ -102,19 +102,19 @@
                     <tr>
                         <th><a href="portfolio_img/reseme6-1.jpg" data-lightbox="group"><img class="item_img" src="portfolio_img/reseme6-1.jpg" alt="デメニギス"></a></th>
                         <td><span class="category">リアルイラスト</span><br><span class="name">デメニギス</span><br>
-                            <span class="detail">Tools : hand drawing/Photoshop</span>
+                            <span class="detail">Tools : Hand-drawn/Photoshop</span>
                         </td>
                     </tr>
                     <tr>
                         <th><a href="portfolio_img/reseme6-2.jpg" data-lightbox="group"><img class="item_img" src="portfolio_img/reseme6-2.jpg" alt="中世の騎士_1s"></a></th>
                         <td><span class="category">リアルイラスト</span><br><span class="name">中世の騎士 1s</span><br>
-                            <span class="detail">Tools : hand drawing/Photoshop</span>
+                            <span class="detail">Tools : Hand-drawn/Photoshop</span>
                         </td>
                     </tr>
                     <tr>
                         <th><a href="portfolio_img/reseme6-3.jpg" data-lightbox="group"><img class="item_img" src="portfolio_img/reseme6-3.jpg" alt="中世の騎士_2s"></a></th>
                         <td><span class="category">リアルイラスト</span><br><span class="name">中世の騎士 2s</span><br>
-                            <span class="detail">Tools : hand drawing/Photoshop</span>
+                            <span class="detail">Tools : Hand-drawn/Photoshop</span>
                         </td>
                     </tr>
                     <tr>
@@ -156,7 +156,7 @@
                     <tr>
                         <th><a href="portfolio_img/reseme8-4.jpg" data-lightbox="group"><img class="item_img" src="portfolio_img/reseme8-4.jpg" alt="日本全国食べ尽くし！！"></a></th>
                         <td><span class="category">フリップデザン</span><br><span class="name">日本全国食べ尽くし！！</span><br>
-                            <span class="detail">Tools : hand drawing/Illustrator/Photoshop</span>
+                            <span class="detail">Tools : Hand-drawn/Illustrator/Photoshop</span>
                         </td>
                     </tr>
                     <tr>
