--- a/logo.html
+++ b/logo.html
@@ -48,7 +48,7 @@
 
         <main>
             <section class="mv">
-                <div class="container">
+                <div class="mv-container">
                     <h2 class="article-title">LOGO/<br class="sp_br">COLORED<br class="sp_br">TELOP</h2>
                     <p class="sub_article-title">Production period : 2012-2016</p>
                 </div>
@@ -94,14 +94,14 @@
                         <th><a href="portfolio_img/reseme1-5.jpg" data-lightbox="group"><img class="item_img" src="portfolio_img/reseme1-5.jpg" alt="タメ出しめでたし旅"></a></th>
                         <td><span class="category">ロゴ</span><br>
                             <span class="name">番組コーナーロゴ</span><br>
-                            <span class="detail">Tools : hand drawing/Photoshop</span>
+                            <span class="detail">Tools : Hand-drawn/Photoshop</span>
                         </td>
                     </tr>
                     <tr>
                         <th><a href="portfolio_img/reseme1-4.jpg" data-lightbox="group"><img class="item_img" src="portfolio_img/reseme1-4.jpg" alt="タメ出しめでたし旅"></a></th>
                         <td><span class="category">ロゴ</span><br>
                             <span class="name">番組コーナーロゴ</span><br>
-                            <span class="detail">Tools : hand drawing/Photoshop</span>
+                            <span class="detail">Tools : Hand-drawn/Photoshop</span>
                         </td>
                     </tr>
                     <tr>
