--- a/others.html
+++ b/others.html
@@ -53,7 +53,7 @@
 
         <main>
             <section class="mv">
-                <div class="container">
+                <div class="mv-container">
                     <h2 class="article-title">OTHERS</h2>
                     <!-- <p class="sub_article-title"></p> -->
                 </div>
@@ -99,7 +99,7 @@
                         <td><span class="category">LINEスタンプ</span><br>
                             <span class="name">ダークサークルうさぎ</span><br>
                             <ul class="detail">
-                                <li>Tools : hand drawing/Photoshop</li>
+                                <li>Tools : Hand-drawn/Photoshop</li>
                                 <li>Production period : 2015</li>
                                 </ul>
                         </td>
@@ -143,7 +143,7 @@
                         <td><span class="category">イラスト</span><br>
                             <span class="name">OCHA 楽曲イメージイラスト</span><br>
                             <ul class="detail">
-                                <li>Tools : hand drawing/Photoshop</li>
+                                <li>Tools : Hand-drawn/Photoshop</li>
                                 <li>Production period : 2016</li>
                                 </ul>
                         </td>
@@ -234,17 +234,17 @@
 
         // 動画のモーダル
         //$(".video-open").modaal({
-          //  type: 'video',
-          //  overlay_close: true,//モーダル背景クリック時に閉じるか
-          //  background: '#28BFE7', // 背景色
-          //  overlay_opacity: 0.8, // 透過具合
-          //  before_open: function () {// モーダルが開く前に行う動作
-          //      $('html').css('overflow-y', 'hidden');/*縦スクロールバーを出さない*/
-          //  },
-          //  after_close: function () {// モーダルが閉じた後に行う動作
-          //      $('html').css('overflow-y', 'scroll');/*縦スクロールバーを出す*/
-          //  }
-       // });
+            //type: 'video',
+            //overlay_close: true,//モーダル背景クリック時に閉じるか
+            //background: '#28BFE7', // 背景色
+            //overlay_opacity: 0.8, // 透過具合
+            //before_open: function () {// モーダルが開く前に行う動作
+                //$('html').css('overflow-y', 'hidden');/*縦スクロールバーを出さない*/
+            //},
+            //after_close: function () {// モーダルが閉じた後に行う動作
+              //  $('html').css('overflow-y', 'scroll');/*縦スクロールバーを出す*/
+            //}
+        //});
     </script>
 </body>
 
