--- a/real.html
+++ b/real.html
@@ -49,7 +49,7 @@
 
         <main>
             <section class="mv">
-                <div class="container">
+                <div class="mv-container">
                     <h2 class="article-title">PORTRAITS</h2>
                     <p class="sub_article-title">Production period : 2012-2016</p>
                 </div>
@@ -60,98 +60,98 @@
                         <th><a href="portfolio_img/reseme5-2.jpg" data-lightbox="group"><img class="item_img" src="portfolio_img/reseme5-2.jpg" alt="ナオト・インティライミ"></a></th>
                         <td><span class="category">リアル似顔絵</span><br>
                             <span class="name">ナオト・インティライミ</span><br>
-                            <span class="detail">Tools : hand drawing/Photoshop</span>
+                            <span class="detail">Tools : Hand-drawn/Photoshop</span>
                         </td>
                     </tr>
                     <tr>
                         <th><a href="portfolio_img/reseme5-1.jpg" data-lightbox="group"><img class="item_img" src="portfolio_img/reseme5-1.jpg" alt="高田純次"></a></th>
                         <td><span class="category">リアル似顔絵</span><br>
                             <span class="name">高田純次</span><br>
-                            <span class="detail">Tools : hand drawing/Photoshop</span>
+                            <span class="detail">Tools : Hand-drawn/Photoshop</span>
                         </td>
                     </tr>
                     <tr>
                         <th><a href="portfolio_img/reseme4-1.jpg" data-lightbox="group"><img class="item_img" src="portfolio_img/reseme4-1.jpg" alt="国分太一"></a></th>
                         <td><span class="category">リアル似顔絵</span><br>
                             <span class="name">国分太一</span><br>
-                            <span class="detail">Tools : hand drawing/Photoshop</span>
+                            <span class="detail">Tools : Hand-drawn/Photoshop</span>
                         </td>
                     </tr>
                     <tr>
                         <th><a href="portfolio_img/reseme5-3.jpg" data-lightbox="group"><img class="item_img" src="portfolio_img/reseme5-3.jpg" alt="市川海老蔵"></a></th>
                         <td><span class="category">リアル似顔絵</span><br>
                             <span class="name">市川海老蔵</span><br>
-                            <span class="detail">Tools : hand drawing/Photoshop</span>
+                            <span class="detail">Tools : Hand-drawn/Photoshop</span>
                         </td>
                     </tr>
                     <tr>
                         <th><a href="portfolio_img/reseme5-4.jpg" data-lightbox="group"><img class="item_img" src="portfolio_img/reseme5-4.jpg" alt="西田幸治"></a></th>
                         <td><span class="category">リアル似顔絵</span><br>
                             <span class="name">西田幸治</span><br>
-                            <span class="detail">Tools : hand drawing/Photoshop</span>
+                            <span class="detail">Tools : Hand-drawn/Photoshop</span>
                         </td>
                     </tr>
                     <tr>
                         <th><a href="portfolio_img/reseme4-4.jpg" data-lightbox="group"><img class="item_img" src="portfolio_img/reseme4-4.jpg" alt="マツコ・デラックス"></a></th>
                         <td><span class="category">リアル似顔絵</span><br>
                             <span class="name">マツコ・デラックス</span><br>
-                            <span class="detail">Tools : hand drawing/Photoshop</span>
+                            <span class="detail">Tools : Hand-drawn/Photoshop</span>
                         </td>
                     </tr>
                     <tr>
                         <th><a href="portfolio_img/reseme4-3.jpg" data-lightbox="group"><img class="item_img" src="portfolio_img/reseme4-3.jpg" alt="aiko"></a></th>
                         <td><span class="category">リアル似顔絵</span><br>
                             <span class="name">aiko</span><br>
-                            <span class="detail">Tools : hand drawing/Photoshop</span>
+                            <span class="detail">Tools : Hand-drawn/Photoshop</span>
                         </td>
                     </tr>
                     <tr>
                         <th><a href="portfolio_img/reseme4-2.jpg" data-lightbox="group"><img class="item_img" src="portfolio_img/reseme4-2.jpg" alt="KARA"></a></th>
                         <td><span class="category">リアル似顔絵</span><br>
                             <span class="name">KARA</span><br>
-                            <span class="detail">Tools : hand drawing/Photoshop</span>
+                            <span class="detail">Tools : Hand-drawn/Photoshop</span>
                         </td>
                     </tr>
                     <tr>
                         <th><a href="portfolio_img/reseme5-7.jpg" data-lightbox="group"><img class="item_img" src="portfolio_img/reseme5-7.jpg" alt="長州力"></a></th>
                         <td><span class="category">リアル似顔絵</span><br>
                             <span class="name">長州力</span><br>
-                            <span class="detail">Tools : hand drawing/Photoshop</span>
+                            <span class="detail">Tools : Hand-drawn/Photoshop</span>
                         </td>
                     </tr>
                     <tr>
                         <th><a href="portfolio_img/reseme5-9.jpg" data-lightbox="group"><img class="item_img" src="portfolio_img/reseme5-9.jpg" alt="板野友美"></a></th>
                         <td><span class="category">リアル似顔絵</span><br>
                             <span class="name">板野友美</span><br>
-                            <span class="detail">Tools : hand drawing/Photoshop</span>
+                            <span class="detail">Tools : Hand-drawn/Photoshop</span>
                         </td>
                     </tr>
                     <tr>
                         <th><a href="portfolio_img/reseme5-8.jpg" data-lightbox="group"><img class="item_img" src="portfolio_img/reseme5-8.jpg" alt="渡辺直美"></a></th>
                         <td><span class="category">リアル似顔絵</span><br>
                             <span class="name">渡辺直美</span><br>
-                            <span class="detail">Tools : hand drawing/Photoshop</span>
+                            <span class="detail">Tools : Hand-drawn/Photoshop</span>
                         </td>
                     </tr>
                     <tr>
                         <th><a href="portfolio_img/reseme5-6.jpg" data-lightbox="group"><img class="item_img" src="portfolio_img/reseme5-6.jpg" alt="岡本夏生"></a></th>
                         <td><span class="category">リアル似顔絵</span><br>
                             <span class="name">岡本夏生</span><br>
-                            <span class="detail">Tools : hand drawing/Photoshop</span>
+                            <span class="detail">Tools : Hand-drawn/Photoshop</span>
                         </td>
                     </tr>
                     <tr>
                         <th><a href="portfolio_img/reseme5-5.jpg" data-lightbox="group"><img class="item_img" src="portfolio_img/reseme5-5.jpg" alt="近藤春菜"></a></th>
                         <td><span class="category">リアル似顔絵</span><br>
                             <span class="name">近藤春菜</span><br>
-                            <span class="detail">Tools : hand drawing/Photoshop</span>
+                            <span class="detail">Tools : Hand-drawn/Photoshop</span>
                         </td>
                     </tr>
                     <tr>
                         <th><a href="portfolio_img/4-yui.jpg" data-lightbox="group"><img class="item_img" src="portfolio_img/4-yui.jpg" alt="YUI"></a></th>
                         <td><span class="category">リアル似顔絵</span><br>
                             <span class="name">YUI</span><br>
-                            <span class="detail">Tools : hand drawing/Photoshop</span>
+                            <span class="detail">Tools : Hand-drawn/Photoshop</span>
                         </td>
                     </tr>
                 </table>
